--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
     background-color: aliceblue;
     font-family: Verdana, Tahoma, sans-serif;
     color:#190000; 
+    background-color:rgb(22, 214, 166);
 }
 
 #slika {
@@ -47,9 +48,7 @@ h3{
   }
 
 
-body{
-            background-color:rgb(22, 214, 166);
-        }
+
 
     img {
   border-radius: 50%;
@@ -60,6 +59,7 @@ body{
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+    <body>
 <table>
     <thead>
 
